--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for TerraProjectCore
 
+1.4.1 - Mod updated for 1.4 and passed autotests
+
+
 1.3.1 - Russian translation added, thanks to Dmitry6!
 
 
