--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for TerraProjectCore
 
+1.4.3 - If Advanced Biomes is loaded the savanna in this mod is renamed to Low Savanna
+
+
 1.4.2 - Added Vanilla fishing support for cave oasis. (Cold biome fishing def)
 
 
