--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for TerraProjectCore
 
+1.4.5 - Added all biomes to vanilla fishing, again. Steam was down last publish
+
+
 1.4.4 - Added all biomes to vanilla fishing
 
 
